Workrave NEWS -- history of user-visible changes. 09 June 2023
Copyright (C) 2001-2023 Rob Caelers, Raymond Penners, Ray Satiro
See the end for copying conditions.

Please report Workrave bug reports. Visit our bug tracker located at:
https://github.com/rcaelers/workrave/issues

* Workrave 1.10.51

** Support GNOME Shell 43 (#430 by Jeremy Bich,async from 1.11)
** Add option to force the use of the X11 Gtk backend on Wayland
** Support GNOME Shell 44 (#487)

* Workrave 1.10.50

** The "Restbreak now" button in the main window no longer responds to keyboard
   (#368)
** Allow installation on Windows without administrator rights.
** Fix vertical alignment of GNOME shell applet (#356)
** Support GNOME Shell 42 (#396)
** Restore support for Windows Vista and up (#367)
** The 'Backward shoulder stretch' exercises now plays a sound twice matching the
   description (#354)

* Workrave 1.10.49

** Adds support for GNOME Shell 41 (#342, Timo Jyrinki)
** Inno Setup improvement (#353, Kaleb Luedtke)

* Workrave 1.10.48

** Fixed GNOME Shell applet on Ubuntu 18.04 (#281)

* Workrave 1.10.47

** Fixed a crash of the GNOME Shell applet (#281)
** Adds support for GNOME Shell 40 (#288)
** Fixed issue where the installer would fail when installing as system user
   (#291)
** Fixed incorrect disabling of postpone/skip button (#301)
** Warn if operation mode is not 'normal' after unlocking the screen (Windows
   only for now)

* Workrave 1.10.45

** Micro breaks without a postpone button could be postponed by starting a rest
   break while the break prompt window was visible and then clicking postpone in
   the rest break window. The postpone button is now disabled when the micro
   break is overdue, and the maximum number of break prompts was reached.
** A new sound theme calls 'Bells' has been added (#225, Pieter De Decker)
** Added support for High-DPI displays in the Windows Applet.
** The Windows applet now correctly enforces a minimum size (#252)